--- a/style.css
+++ b/style.css
@@ -164,11 +164,33 @@ width: 65px;
   margin-top: -35px;
 }
 .bebedouro{
-  margin-top: -155px;
+  margin-top: -150px;
   margin-left: 430px;
 }
-
+.bebedouro1{
+margin-top: -130px;
+margin-left: 455px;
+width: 55px;
+}
+.bebedouro2{
+  margin-top: -82px;
+  margin-left: 520px;
+  width: 55px;
+}
+.Parcial{
+  margin-left: 457px;
+  margin-top: -1px;
+}
+.Proibido{
+  margin-left: 522px;
+  margin-top: -35px;
+}
  
+
+
+
+
+
 
 
 
